RESOLVED FIXED12724
Crash when enumerating XPath namespace axis
https://bugs.webkit.org/show_bug.cgi?id=12724
Summary Crash when enumerating XPath namespace axis
Alexey Proskuryakov
Reported 2007-02-10 05:26:46 PST
XPath namespace nodes are not implemented yet (bug 12504), but trying to access them shouldn't cause a crash, as it does currently.
Attachments
proposed fix (6.01 KB, patch)
2007-02-10 05:43 PST, Alexey Proskuryakov
mjs: review+
Alexey Proskuryakov
Comment 1 2007-02-10 05:43:07 PST
Created attachment 13104 [details] proposed fix
Maciej Stachowiak
Comment 2 2007-02-10 15:06:07 PST
Comment on attachment 13104 [details] proposed fix r=me
Sam Weinig
Comment 3 2007-02-10 18:16:22 PST
Landed in r19558.
Note You need to log in before you can comment on or make changes to this bug.