LayoutTests:

Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=12724
        Crash when enumerating XPath namespace axis

        Test adapted from Python-based 4XPath test suite,
        <http://sourceforge.net/projects/foursuite/>

        * fast/xpath/namespace-nodes-expected.txt: Added.
        * fast/xpath/namespace-nodes.html: Added.

WebCore:

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=12724
        Crash when enumerating XPath namespace axis

        * xml/XPathStep.cpp:
        (WebCore::XPath::Step::nodesInAxis): Namespace axis enumeration was broken in that it crashed, and also in that
        it returned attribute nodes instead of XPath namespace ones. Removed it altogether.



Canonical link: https://commits.webkit.org/16444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19558 268f45cc-cd09-0410-ab3c-d52691b4dbfc